--- a/ProgramingStudy/App.config
+++ b/ProgramingStudy/App.config
@@ -36,7 +36,15 @@
   
   
 <system.serviceModel>
-        <bindings/>
-        <client/>
+        <bindings>
+                <basicHttpBinding>
+                        <binding name="Config1Binding" />
+                </basicHttpBinding>
+        </bindings>
+        <client>
+                <endpoint address="http://gage.itdemo.local:51100/DBA/Config1?style=document"
+                        binding="basicHttpBinding" bindingConfiguration="Config1Binding"
+                        contract="ServiceReference1.DBAVi" name="Config1Port" />
+        </client>
     </system.serviceModel>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
