--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Study\C7\C71Features.cs" />
     <Compile Include="Study\C7\C72Features.cs" />
     <Compile Include="Study\C7\C73Features.cs" />
+    <Compile Include="Study\Exam01.cs" />
+    <Compile Include="Study\JsonWithHtml.cs" />
     <Compile Include="Study\LinquStudy.cs" />
     <Compile Include="LiteDB\Entity.cs" />
     <Compile Include="LiteDB\IRepository.cs" />
@@ -218,6 +220,7 @@
     <Compile Include="Study\ReferencDuplicateStudy.cs" />
     <Compile Include="Study\RefOutIn.cs" />
     <Compile Include="Study\RegexpTests.cs" />
+    <Compile Include="Study\RemoveCharsFromXML.cs" />
     <Compile Include="Study\RestMethods.cs" />
     <Compile Include="Study\RoleManager.cs" />
     <Compile Include="Study\ScaleRatio.cs" />
