--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -4,15 +4,26 @@
   <package id="FluentFTP" version="16.3.0" targetFramework="net46" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="LiteDB" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.3" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.2.1" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.2.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
   <package id="NLog" version="4.3.10" targetFramework="net46" />
   <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
   <package id="RestSharp" version="106.2.1" targetFramework="net461" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net46" />
   <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net46" />
   <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net46" />
   <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net46" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
